@@ -4,6 +4,12 @@ Development Progress	:
 ---------------------------
 
 2011-07-27 (SVN):
+    * debuglog.c: Removed the O_APPEND flag when opening the log file. It
+      was a legacy from Quake who used to open and close the log file on
+      every write. Commented out the Sys_unlink() call and added O_TRUNC
+      to the open flags. Replaced an fprintf() by Sys_PrintTerm().
+
+2011-07-27 (SVN):
     * hexen2/sys_win.c, hexenworld/client/sys_win.c (WinMain): Instead
       of using an empty string, use GetModuleFileName() to get the app's
       name. Remove the useless S_BlockSound() call. Detect early whether
